:lipstick: Final Touches and linters
Final touches

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #c3cea8;
+  background-color: #fafafa;
   font-family: 'Roboto Slab', serif;
 }
 
@@ -59,10 +59,6 @@ a:-webkit-any-link {
   align-items: center;
 }
 
-.b-radius {
-  border-radius: 5px;
-}
-
 .montserrat {
   font-family: 'Montserrat', sans-serif;
 }
@@ -92,6 +88,7 @@ a:-webkit-any-link {
 
 .btn {
   border: none;
+  border-radius: 5px;
   padding: 10px 30px;
 }
 
